ingress-rdtclient.yaml
## Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rdtclient
  namespace: mediaserver
spec:
  ingressClassName: traefik-internal
  rules:
  - host: rdtclient.mediaserver.k8s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  rdtclient
            port:
              number: 6500
